Kubernetes/apps/frontend-app/02-dep.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend-dep
  labels:
    app: frontend-app
spec:
  replicas: 2  
  selector: 
    matchLabels:
      app: frontend-app
  template: 
    metadata:
      name: frontend-pod
      labels:
        app: web-portfolio
    spec:
      imagePullSecrets:
      - name: dockerhub-regcreds
      containers:
        - name: frontend-container
          image: sjplautz/web-portfolio:frontend-app
          ports:
            - name: http
              containerPort: 80
          imagePullPolicy: Always
