Kubernetes/apps/frontend-app/01-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-svc
  namespace: default
  labels:
    app: frontend-app
spec:
  selector:
    app: frontend-app
  ports:
    - name: http
      protocol: TCP
      port:  80
      targetPort: 80
