Kubernetes/apps/frontend-app/03-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`splautz.com`)
      services:
        - name: frontend-svc
          port: 80
  tls:
    certResolver: le
